# fission-sim

./: .gitignore  DEVELOPMENT.md  Makefile  README.md  pyproject.toml
.claude/agents/: pwr-operator.md  reactor-physicist.md
examples/: console.py  dump_state.py  power_maneuver.py  report_core.py  report_primary.py  run_core.py  run_primary.py  startup.py
scripts/: dev.py
src/fission_sim/: __init__.py  disclaimer.py
src/fission_sim/api/: __init__.py  __main__.py  app.py  runtime.py
src/fission_sim/control/: __init__.py  pressurizer_controller.py
src/fission_sim/engine/: __init__.py  engine.py
src/fission_sim/physics/: coolprop.py  core.py  pressurizer.py  primary_loop.py  rod_controller.py  secondary_sink.py  steam_generator.py  surge.py
tests/: test_coolprop.py  test_core.py  test_dev_launcher.py  test_disclaimer.py  test_engine.py  test_pressurizer.py  test_pressurizer_controller.py  test_pressurizer_plant.py  test_primary_loop.py  test_primary_plant.py  test_rod_controller.py  test_secondary_sink.py  test_steam_generator.py
tests/api/: test_commands.py  test_health.py  test_runtime.py  test_runtime_pause_publish.py  test_websocket.py
web/: .eslintrc.cjs  .gitignore  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.json  tsconfig.node.json  vite.config.ts
web/e2e/: smoke.spec.ts
web/src/: App.tsx
web/src/charts/: ChartGrid.tsx  PowerChart.tsx  PressureChart.tsx  ReactivityChart.tsx  TemperatureChart.tsx  chartData.test.ts  chartData.ts  chartTheme.ts
web/src/controls/: ConfirmDialog.tsx  (+1 more)
(+10 files in other folders)
