[project]
name = "fission-sim"
version = "0.1.0"
description = "PWR simulator — a learning project."
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "coolprop",
    "fastapi",
    "uvicorn[standard]",
    "websockets",
]

[dependency-groups]
dev = [
    "pytest",
    "ruff",
    "httpx",
    "pytest-asyncio",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fission_sim"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
